--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,11 @@ description: Flutter redux todo list
 dependencies:
   flutter:
     sdk: flutter
+  built_value: "^5.4.3"
+  built_collection: "^3.1.1"
+  built_redux: "^7.4.0"
+  flutter_built_redux: "^0.5.0"
+  fluro: "^1.3.1"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -12,6 +17,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build: "^0.12.2"
+  build_runner: "^0.7.9"
+  built_value_generator: "^5.4.3"
+  source_gen: "^0.8.1"
 
 
 # For information on the generic Dart part of this file, see the
