--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ dependencies:
   built_redux: "^7.4.0"
   flutter_built_redux: "^0.5.0"
   fluro: "^1.3.1"
+  firebase_database: "^0.4.5"
+  redux_epics: "^0.9.0"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
