--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   fluro: "^1.3.1"
   firebase_database: "^0.4.5"
   redux_epics: "^0.9.0"
+  built_redux_rx: "^0.1.1"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
