--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,12 +6,11 @@ dependencies:
     sdk: flutter
   built_value: "^5.4.3"
   built_collection: "^3.1.1"
-  built_redux: "^7.4.0"
-  flutter_built_redux: "^0.5.0"
   fluro: "^1.3.1"
   firebase_database: "^0.4.5"
   redux_epics: "^0.9.0"
-  built_redux_rx: "^0.1.1"
+  redux: "^3.0.0"
+  flutter_redux: "^0.5.0"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
